--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -9,9 +9,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Set up Python
       uses: actions/setup-python@v2
-    - run: python3 -m pip install nbformat ipykernel papermill nbconvert 
+    - run: python3 -m pip install nbformat ipykernel papermill nbconvert seaborn plotly
     - run: python -m ipykernel install --user --name AgamPrimer
     - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/qPCR_Params.json
+    - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
+    - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
 
 
 
