--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Set up Python
       uses: actions/setup-python@v2
-    - run: python3 -m pip install malariagen_data primer3-py nbformat ipykernel papermill nbconvert seaborn plotly
+    - run: python3 -m pip install malariagen_data>=6.0.0 primer3-py nbformat ipykernel papermill nbconvert seaborn plotly
     - run: python -m ipykernel install --user --name AgamPrimer
     - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/qPCR_Params.json
     - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
