--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,30 @@
+[tool.poetry]
+name = "AgamPrimer"
+version = "0.5.6"
+description = "A package to design primers in Anopheles gambiae whilst considering genetic variation with malariagen_data"
+authors = [
+    "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
+    ]
+packages = [
+    { include = "AgamPrimer" }
+]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = ">=3.7.1,<3.10"
+primer3-py = "*"
+malariagen_data = "*"
+gget = "*"
+seaborn = "*"
+
+
+[tool.poetry.dev-dependencies]
+pre-commit = "*"
+black = "*"
+
 [build-system]
-requires = ["setuptools>=42"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
