--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -11,8 +11,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.7'
-    - run: python3 -m pip install malariagen_data>=6.0.0 primer3-py nbformat ipykernel papermill nbconvert seaborn plotly openpyxl gget
+    - run: python3 -m pip install AgamPrimer nbformat ipykernel papermill nbconvert
     - run: python -m ipykernel install --user --name AgamPrimer
-    - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/qPCR_Params.json
-    - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
-    - run: papermill Primer-Design-in-Anopheles-gambiae.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
+    - run: papermill notebooks/Primer-Design-in-Anopheles-gambiae.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/qPCR_Params.json
+    - run: papermill notebooks/Primer-Design-in-Anopheles-gambiae.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
+    - run: papermill notebooks/Primer-Design-in-Anopheles-gambiae.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
