--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "AgamPrimer"
-version = "0.5.6"
+version = "0.5.7"
 description = "A package to design primers in Anopheles gambiae whilst considering genetic variation with malariagen_data"
 authors = [
     "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
@@ -14,13 +14,17 @@ license = "MIT"
 python = ">=3.7.1,<3.10"
 primer3-py = "*"
 malariagen_data = "*"
+openpyxl = "*"
 gget = "*"
 seaborn = "*"
-
+kaleido = "0.2.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
 black = "*"
+pytest = "*"
+notebook = "*"
+jupyterlab = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
