--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -14,5 +14,7 @@ jobs:
     - run: python3 -m pip install AgamPrimer nbformat ipykernel papermill nbconvert
     - run: python -m ipykernel install --user --name AgamPrimer
     - run: papermill notebooks/AgamPrimer-long.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/cDNA_Params.json
+    - run: papermill notebooks/AgamPrimer-long.ipynb qPCR2_run.ipynb -k AgamPrimer -f tests/cDNA_Params_2.json
     - run: papermill notebooks/AgamPrimer-long.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
     - run: papermill notebooks/AgamPrimer-long.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
+    - run: papermill notebooks/AgamPrimer-short.ipynb short_run.ipynb -k AgamPrimer
