--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -1,20 +1,46 @@
-name: Execute notebook
+name: Execute notebooks
 
-on: [push, pull_request]
+on:
+  push:
+      branches:
+          - master
+  pull_request:
+      branches:
+          - master
 
 jobs:
+
   run:
+
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+          python-version: ['3.8', '3.9', '3.10', '3.11']
+
     steps:
-    - uses: actions/checkout@v3
+
+    - name: Checkout source
+      uses: actions/checkout@v3
+
+    - name: Install poetry
+      run: pipx install poetry==1.4.2
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.7'
-    - run: python3 -m pip install AgamPrimer nbformat ipykernel papermill nbconvert
-    - run: python -m ipykernel install --user --name AgamPrimer
-    - run: papermill notebooks/AgamPrimer-long.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/cDNA_Params.json
-    - run: papermill notebooks/AgamPrimer-long.ipynb qPCR2_run.ipynb -k AgamPrimer -f tests/cDNA_Params_2.json
-    - run: papermill notebooks/AgamPrimer-long.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
-    - run: papermill notebooks/AgamPrimer-long.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
-    - run: papermill notebooks/AgamPrimer-short.ipynb short_run.ipynb -k AgamPrimer
+        python-version: ${{ matrix.python-version }}
+        cache: 'poetry'
+
+    - name: Install dependencies
+      run: |
+        poetry install
+        python -m ipykernel install --user --name AgamPrimer
+
+    - name: Run notebooks
+      run: |
+        papermill notebooks/AgamPrimer-long.ipynb qPCR_run.ipynb -k AgamPrimer -f tests/cDNA_Params.json
+        papermill notebooks/AgamPrimer-long.ipynb qPCR2_run.ipynb -k AgamPrimer -f tests/cDNA_Params_2.json
+        papermill notebooks/AgamPrimer-long.ipynb gDNA_run.ipynb -k AgamPrimer -f tests/gDNA_probe_Params.json
+        papermill notebooks/AgamPrimer-long.ipynb probe_run.ipynb -k AgamPrimer -f tests/probe_Params.json
+        papermill notebooks/AgamPrimer-short.ipynb short_run.ipynb -k AgamPrimer
