add papermill to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "*"
 notebook = "*"
 jupyterlab = "*"
 snakeviz = "*"
+papermill = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
