--- a/.github/workflows/github-action-AgamPrimer.yml
+++ b/.github/workflows/github-action-AgamPrimer.yml
@@ -3,10 +3,10 @@ name: Execute notebooks
 on:
   push:
       branches:
-          - master
+          - main
   pull_request:
       branches:
-          - master
+          - main
 
 jobs:
 
