--- a/docs/AnoPrimer-docs/_config.yml
+++ b/docs/AnoPrimer-docs/_config.yml
@@ -13,7 +13,7 @@ execute:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/sanjaynagi.github.io/AgamPrimer # Online location of your book
+  url: https://github.com/sanjaynagi.github.io/AnoPrimer # Online location of your book
   path_to_book: docs/  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
@@ -29,7 +29,7 @@ sphinx:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: AgamPrimer.tex
+    targetname: AnoPrimer.tex
 
 # Add a bibtex file so that we can create citations
 #bibtex_bibfiles:
@@ -42,7 +42,7 @@ html:
   use_repository_button: true
   comments:
     utterances:
-      repo: "sanjaynagi/AgamPrimer"
+      repo: "sanjaynagi/AnoPrimer"
       issue-term: "pathname"
       label: "comment"
       theme: "github-light"
