--- a/.github/workflows/github-action-AgamPrimer-funestus.yml
+++ b/.github/workflows/github-action-AgamPrimer-funestus.yml
@@ -37,6 +37,20 @@ jobs:
         poetry install
         poetry run python -m ipykernel install --user --name AnoPrimer
 
+    - id: 'auth'
+      name: 'Set up Google Cloud authentication'
+      uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+
+    - name: 'Set up Google Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v2'
+      with:
+        version: '>= 363.0.0'
+
+    - name: 'Check gcloud CLI'
+      run: 'gcloud info'
+
     - name: Run notebooks
       run: |
         poetry run papermill notebooks/AnoPrimer-long.ipynb qPCR_run.ipynb -k AnoPrimer -f tests/cDNA_Params_fun.json
