--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-primer3-py = "2.0.0"
+primer3-py = ">=2.0.0"
 malariagen_data = ">=10.0.0"
 openpyxl = "*"
 gget = "*"
